--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,14 @@
     <string name="click_one_of_the_tags_below">See below predictions</string>
     <string name="err_unable_load_image">Unable to load selected image.</string>
     <string name="empty_str_recent">Start by taking photo of ingredients</string>
+    <string name="search">Search Recipe</string>
+    <string name="title_activity_recipe">RecipeActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
